@@ -25,8 +25,9 @@ $(_SDCCDIR)/sdccconf.h:
 	cd $(_SDCCDIR); \
 	CC=$(TARGETCC) \
 	CXX=$(TARGETCXX) \
-	STRIP=$(TARGETSTRIP) \
+	AR=$(TARGETAR) \
 	RANLIB=$(TARGETRANLIB) \
+	STRIP=$(TARGETSTRIP) \
 	CPPFLAGS=$(TARGETCPPFLAGS) \
 	CFLAGS=$(TARGETCFLAGS) \
 	CXXFLAGS=$(TARGETCXXFLAGS) \
